fix: put some gap space and remove the align-items in the css on foundVideos page

--- a/styles/FoundVideos.module.css
+++ b/styles/FoundVideos.module.css
@@ -1,8 +1,7 @@
 .videosContainer {
   display: flex;
-  align-items: center;
   flex-direction: column;
-  gap: 10px;
+  gap: 24px;
 }
 
 .videoContainer {
